@@ -1,14 +1,19 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.506 2005/12/02 02:50:50 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.507 2005/12/02 04:30:38 codeman Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
   1 Dec 2005; Preston Cody <codeman@gentoo.org>
   added debug mode question to gli-dialog
   added CC proxies to CC networking for gli-dialog
-  
+  webgli: fixed skip CC networking if connection active
+  webgli: portage snapshot defaults to CD
+  webgli: bootloader mbr drive selection
+  webgli: USE flags unselectable if dynamic_stage3
+  webgli: manual extra packages and save button.
+    
   28 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIUtility.py:
   change ping count to 2
